# letterboxd_get_list

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LetterboxdFilm.py  MANUAL_INSTALL.md  README.md  a  attr-form.py  get_list.py  healthcheck.py  letterboxd_list.py  pyproject.toml  requirements.txt  test-file.csv  valid-lb-attrs.txt  w
.github/workflows/: linux-ci.yaml  mac-ci.yaml  module-ci.yaml  windows-ci.yaml
letterboxd_list/: pyproject.toml  test-file.csv
letterboxd_list/src/letterboxd_list/: __init__.py  __main__.py  containers.py  valid-lb-attrs.txt
letterboxd_list/tests/: __init__.py  random-list-no-stats.csv  random-list-test.csv  test_cli.py  test_lb_film.py  test_lb_list.py
