[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "letterboxd_list"
version = "1.3"
authors = [
    { name = "Martin Reid", email = "lmreid1997@gmail.com" },
]
description = "Gets and formats a given list from Letterboxd.com as a CSV file, with specified film attributes, utilizing scraping techniques."
requires-python = ">=3.10"
dependencies = [ "pycurl", "selectolax" ]
license = "MIT"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "pandas"]

[project.urls]
Homepage = "https://github.com/lmr97/letterboxd_get_list"

[project.scripts]
lblist = "letterboxd_list.__main__:main"

[tool.pytest.ini_options]
testpaths = [ "letterboxd/tests/" ]

[tool.coverage.run]
source = [ "letterboxd_list/src/" ]
omit = [ "letterboxd_list/tests/*" ]